Add web browser spawn.

--- a/docs/radps_workflow_sd_blflag.ipynb
+++ b/docs/radps_workflow_sd_blflag.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b4e0a0e-2df9-428c-82a1-0f210af0eee0",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import dask\n",
     "import time\n",
     "import random\n",
+    "import webbrowser\n",
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -28,10 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9b9e530f-65c9-4491-ab6b-c28603f576a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MenrvaClient' object has no attribute 'local_client'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m client = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlocal_client\u001b[49m(\n\u001b[32m      2\u001b[39m     cores=\u001b[32m10\u001b[39m,\n\u001b[32m      3\u001b[39m     log_params={\n\u001b[32m      4\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_file\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m      5\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_term\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_level\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mDEBUG\u001b[39m\u001b[33m\"\u001b[39m \n\u001b[32m      7\u001b[39m     },\n\u001b[32m      8\u001b[39m     worker_log_params={\n\u001b[32m      9\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_file\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m     10\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_term\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m     11\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_level\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mDEBUG\u001b[39m\u001b[33m\"\u001b[39m \n\u001b[32m     12\u001b[39m     }\n\u001b[32m     13\u001b[39m )\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Comment out if you don't want this to spawn ...\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m spawned:\n",
+      "\u001b[31mAttributeError\u001b[39m: 'MenrvaClient' object has no attribute 'local_client'"
+     ]
+    }
+   ],
    "source": [
     "client = client.local_client(\n",
     "    cores=10,\n",
@@ -47,7 +60,10 @@
     "    }\n",
     ")\n",
     "\n",
-    "client.dashboard_link"
+    "# Comment out if you don't want this to spawn ...\n",
+    "if spawned:\n",
+    "    webbrowser.open(url=client.dashboard_link)\n",
+    "    spawn = True"
    ]
   },
   {
