--- a/docs/tutorials/atsroviper_tutorial_fft.ipynb
+++ b/docs/tutorials/atsroviper_tutorial_fft.ipynb
@@ -4528,7 +4528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zinc",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4542,7 +4542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
