--- a/docs/radps_workflow_sd_blflag.ipynb
+++ b/docs/radps_workflow_sd_blflag.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3b4e0a0e-2df9-428c-82a1-0f210af0eee0",
    "metadata": {},
    "outputs": [],
@@ -28,23 +28,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56a093b9-234f-4a99-a122-bd046120c414",
+   "metadata": {},
+   "source": [
+    "### Start Dask Client"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b9e530f-65c9-4491-ab6b-c28603f576a1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'MenrvaClient' object has no attribute 'local_client'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m client = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlocal_client\u001b[49m(\n\u001b[32m      2\u001b[39m     cores=\u001b[32m10\u001b[39m,\n\u001b[32m      3\u001b[39m     log_params={\n\u001b[32m      4\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_file\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m      5\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_term\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_level\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mDEBUG\u001b[39m\u001b[33m\"\u001b[39m \n\u001b[32m      7\u001b[39m     },\n\u001b[32m      8\u001b[39m     worker_log_params={\n\u001b[32m      9\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_file\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m     10\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_to_term\u001b[39m\u001b[33m\"\u001b[39m:\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m     11\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mlog_level\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mDEBUG\u001b[39m\u001b[33m\"\u001b[39m \n\u001b[32m     12\u001b[39m     }\n\u001b[32m     13\u001b[39m )\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Comment out if you don't want this to spawn ...\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m spawned:\n",
-      "\u001b[31mAttributeError\u001b[39m: 'MenrvaClient' object has no attribute 'local_client'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client = client.local_client(\n",
     "    cores=10,\n",
@@ -60,10 +56,8 @@
     "    }\n",
     ")\n",
     "\n",
-    "# Comment out if you don't want this to spawn ...\n",
-    "if spawned:\n",
-    "    webbrowser.open(url=client.dashboard_link)\n",
-    "    spawn = True"
+    "# Comment out if you don't want this to spawn.\n",
+    "webbrowser.open(url=client.dashboard_link)"
    ]
   },
   {
@@ -82,9 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Simple function to generate a time delay and simulate \n",
+    "# data processing\n",
     "def generate_delay(n=1, m=2):\n",
     "    time.sleep(random.uniform(n, m))\n",
     "\n",
+    "# Build a simple Dask dataset based on a given set of axes\n",
     "def simulate(field, spw, polarization, antenna, row):\n",
     "    data_shape = {\n",
     "        \"field\": [f\"field_{i}\" for i in range(field)],\n",
@@ -104,18 +102,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc9efc15-ca2f-4ace-970a-7b465e07a850",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " #Build simulated dataset with desired dimensions\n",
-    "dataset = simulate(field=2, spw=1, polarization=[\"XX\", \"YY\"], antenna=2, row=2)\n",
+    "    return dataset\n",
     "\n",
     "# Recursive processing to build graph \n",
     "def process_(dataset, axes, function, shape, delayed_list, previous):\n",
@@ -161,6 +148,17 @@
     "    )\n",
     "\n",
     "    return delayed_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6effd474-62d0-4528-bf6b-dc1fd782cf67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build simulated dataset with desired dimensions\n",
+    "dataset = simulate(field=2, spw=1, polarization=[\"XX\", \"YY\"], antenna=2, row=2)"
    ]
   },
   {
