Clean up notebook output.

--- a/docs/radps_workflow_sd_blflag.ipynb
+++ b/docs/radps_workflow_sd_blflag.ipynb
@@ -56,7 +56,8 @@
     "    }\n",
     ")\n",
     "\n",
-    "# Comment out if you don't want this to spawn.\n",
+    "# Spawn dashboard window in a seperate tab,\n",
+    "# comment out if you don't want this to spawn.\n",
     "webbrowser.open(url=client.dashboard_link)"
    ]
   },
