Update walking skeleton to include output showing the current processing axes for each leaf that is processed.

--- a/docs/radps_workflow_sd_blflag.ipynb
+++ b/docs/radps_workflow_sd_blflag.ipynb
@@ -58,6 +58,16 @@
     "\n",
     "# Spawn dashboard window in a seperate tab,\n",
     "# comment out if you don't want this to spawn.\n",
+    "# webbrowser.open(url=client.dashboard_link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7028f6b-fa5c-46f3-8325-a1ec7349de4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "webbrowser.open(url=client.dashboard_link)"
    ]
   },
@@ -106,25 +116,32 @@
     "    return dataset\n",
     "\n",
     "# Recursive processing to build graph \n",
-    "def process_(dataset, axes, function, shape, delayed_list, previous):\n",
+    "def process_(dataset, axes, function, shape, delayed_list, previous, job_description):\n",
     "    import copy\n",
     "    \n",
     "    if len(axes) == 0:\n",
     "        # Since I don't want to write a complicated algorithm to get this right yet, lets just assume \n",
     "        # we want to process the final data shape in this way.\n",
-    "        np.prod(shape)\n",
+    "        process_axes = [str(axis_) for axis_ in job_description['values']]\n",
+    "        print(f\"{function.__name__}::{process_axes}()\")\n",
     "        delayed_list.append(dask.delayed(function)(previous))\n",
+    "        \n",
     "        return\n",
     "    \n",
     "    axis = axes[0]\n",
     "    for i, key in enumerate(dataset.coords[axis].data):\n",
+    "        job_description_ = copy.deepcopy(job_description)\n",
+    "        job_description_[\"axes\"].append(axis)\n",
+    "        job_description_[\"values\"].append(key)\n",
+    "\n",
     "        process_(\n",
     "            dataset=dataset, \n",
     "            axes=axes[1:], \n",
     "            function=function, \n",
     "            shape=shape, \n",
     "            delayed_list=delayed_list, \n",
-    "            previous=previous\n",
+    "            previous=previous,\n",
+    "            job_description = job_description_\n",
     "        )\n",
     "\n",
     "# Distributed function to build graph and map functions\n",
@@ -145,7 +162,8 @@
     "        function=function, \n",
     "        shape=shape,\n",
     "        delayed_list=delayed_list,\n",
-    "        previous=previous\n",
+    "        previous=previous,\n",
+    "        job_description = {\"axes\":[], \"values\":[]}\n",
     "    )\n",
     "\n",
     "    return delayed_list"
@@ -159,7 +177,7 @@
    "outputs": [],
    "source": [
     "# Build simulated dataset with desired dimensions\n",
-    "dataset = simulate(field=2, spw=1, polarization=[\"XX\", \"YY\"], antenna=2, row=2)"
+    "dataset = simulate(field=1, spw=2, polarization=[\"XX\", \"YY\"], antenna=1, row=2)"
    ]
   },
   {
