Add model flux plotting to convergence plot
Add the tracked model flux to the convergence plot, to view the peak residual
and model flux on the same plot.

--- a/docs/core_tutorials/imaging/iteration_control_demo.ipynb
+++ b/docs/core_tutorials/imaging/iteration_control_demo.ipynb
@@ -693,6 +693,7 @@
     "\n",
     "# Run deconvolution with history tracking\n",
     "current_peak = 1.0  # Start with 1 Jy residual\n",
+    "current_model_flux = 0.0  # Track cumulative model flux\n",
     "major_cycle = 0\n",
     "\n",
     "print(\"Running deconvolution with convergence history tracking...\\n\")\n",
@@ -716,6 +717,10 @@
     "        gain=controller_viz.gain\n",
     "    )\n",
     "    \n",
+    "    # Calculate model flux (increases as we deconvolve)\n",
+    "    flux_added = current_peak - new_peak  # Flux moved to model\n",
+    "    current_model_flux += flux_added\n",
+    "    \n",
     "    # Add results to history ReturnDict\n",
     "    # NOTE: Calling add() multiple times with the same (time, pol, chan) key\n",
     "    #       will APPEND to history lists (peakres, iter_done, masksum)\n",
@@ -724,6 +729,7 @@
     "        'peakres_nomask': new_peak,\n",
     "        'masksum': 100,\n",
     "        'iter_done': iters_done,\n",
+    "        'model_flux': current_model_flux,\n",
     "        'max_psf_sidelobe': 0.2,\n",
     "        'loop_gain': 0.1,\n",
     "    }, time=0, pol=0, chan=0)  # Same key each time = history tracking!\n",
@@ -744,7 +750,8 @@
     "history_data = history_rd.data[key]\n",
     "print(f\"\\nHistory stored in ReturnDict:\")\n",
     "print(f\"  peakres history: {history_data['peakres']}\")\n",
-    "print(f\"  iter_done history: {history_data['iter_done']}\")"
+    "print(f\"  iter_done history: {history_data['iter_done']}\")\n",
+    "print(f\"  model_flux history: {history_data['model_flux']}\")"
    ]
   },
   {
@@ -754,7 +761,14 @@
    "source": [
     "### Create Interactive Convergence Plot\n",
     "\n",
-    "The `ConvergencePlots` class provides an object-oriented interface for creating convergence plots."
+    "The `ConvergencePlots` class provides an object-oriented interface for creating convergence plots.\n",
+    "\n",
+    "**Plot Format**: The plot displays **dual y-axes** with:\n",
+    "- **Blue line (left y-axis)**: Peak Residual (Jy)\n",
+    "- **Red line (right y-axis)**: Model Flux (Jy)\n",
+    "- Both metrics plotted against cumulative iterations\n",
+    "\n",
+    "If model flux data is not available, the plot falls back to showing only peak residual."
    ]
   },
   {
@@ -850,6 +864,7 @@
     "    )\n",
     "    \n",
     "    current_peak = initial_peak\n",
+    "    current_model_flux_chan = 0.0  # Track model flux for this channel\n",
     "    print(f\"Channel {chan_idx}: initial peak = {initial_peak:.4f} Jy, gain = {gain:.2f}\")\n",
     "    \n",
     "    # Run deconvolution cycles\n",
@@ -864,12 +879,17 @@
     "        # Mock deconvolution\n",
     "        new_peak, iters_done = mock_deconvolve(current_peak, cycleniter, cyclethresh, gain)\n",
     "        \n",
+    "        # Calculate model flux\n",
+    "        flux_added = current_peak - new_peak\n",
+    "        current_model_flux_chan += flux_added\n",
+    "        \n",
     "        # Add to multi-channel history\n",
     "        multi_channel_rd.add({\n",
     "            'peakres': new_peak,\n",
     "            'peakres_nomask': new_peak,\n",
     "            'masksum': 100,\n",
     "            'iter_done': iters_done,\n",
+    "            'model_flux': current_model_flux_chan,\n",
     "            'max_psf_sidelobe': 0.2,\n",
     "            'loop_gain': gain,\n",
     "        }, time=0, pol=0, chan=chan_idx)\n",
