--- a/docs/core_tutorials/imaging/demo_stokes_correlation_conversion.ipynb
+++ b/docs/core_tutorials/imaging/demo_stokes_correlation_conversion.ipynb
@@ -5,7 +5,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# DEMO: Stokes/Correlation Conversion for Visibility Data\n",
+    "# Stokes/Correlation Conversion for Visibility Data\n",
     "\n",
     "[Colab Link](https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/core_tutorials/imaging/demo_stokes_correlation_conversion.ipynb)\n",
     "\n",
@@ -13,18 +13,15 @@
     "\n",
     "**Key Concepts:**\n",
     "- **Correlation products** represent the raw output from interferometer feeds (e.g., XX, XY, YX, YY for linear feeds or RR, RL, LR, LL for circular feeds)\n",
-    "- **Stokes parameters** (I, Q, U, V) represent physical polarization properties:\n",
-    "  - I: Total intensity\n",
-    "  - Q: Linear polarization (horizontal vs vertical)\n",
-    "  - U: Linear polarization (±45°)\n",
-    "  - V: Circular polarization\n",
-    "\n",
+    "- **Stokes parameters** (I, Q, U, V) represent physical polarization properties.\n",
+    "  \n",
     "**This tutorial covers:**\n",
     "1. Linear polarization conversion (XX, XY, YX, YY ↔ I, Q, U, V)\n",
     "2. Circular polarization conversion (RR, RL, LR, LL ↔ I, Q, U, V)\n",
     "3. Round-trip conversion verification\n",
     "4. Working with multidimensional visibility arrays\n",
-    "5. xarray DataArray compatibility"
+    "5. Working with xarray DataArrays (extract `.values` for low-level functions)\n",
+    "6. Higher-level image conversion functions (accept both numpy and xarray)"
    ]
   },
   {
@@ -76,7 +73,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "from matplotlib import pyplot as plt\n",
-    "from astroviper.core.imaging.imaging_utils.corr_to_stokes import corr_to_stokes, stokes_to_corr\n",
+    "from astroviper.core.imaging.imaging_utils.corr_to_stokes import corr_to_stokes, stokes_to_corr, image_stokes_to_corr, image_corr_to_stokes\n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)"
@@ -92,10 +89,10 @@
     "Linear feeds produce correlation products in the order: **[XX, XY, YX, YY]**\n",
     "\n",
     "These convert to Stokes parameters **[I, Q, U, V]** using:\n",
-    "- I = XX + YY (total intensity)\n",
-    "- Q = XX - YY (linear polarization)\n",
-    "- U = XY + YX (linear polarization at 45°)\n",
-    "- V = i(YX - XY) (circular polarization)"
+    "- I = XX + YY\n",
+    "- Q = XX - YY\n",
+    "- U = XY + YX\n",
+    "- V = i(YX - XY)"
    ]
   },
   {
@@ -123,9 +120,10 @@
     "\n",
     "# From the inverse formulas:\n",
     "# XX = (I + Q)/2 = (10 + 2)/2 = 6.0\n",
-    "# YY = (I - Q)/2 = (10 - 2)/2 = 4.0\n",
     "# XY = (U + iV)/2 = (0 + 0)/2 = 0.0\n",
     "# YX = (U - iV)/2 = (0 - 0)/2 = 0.0\n",
+    "# YY = (I - Q)/2 = (10 - 2)/2 = 4.0\n",
+    "\n",
     "\n",
     "linear_corr = np.array([6.0 + 0.0j, 0.0 + 0.0j, 0.0 + 0.0j, 4.0 + 0.0j])\n",
     "\n",
@@ -193,10 +191,10 @@
     "Circular feeds produce correlation products in the order: **[RR, RL, LR, LL]**\n",
     "\n",
     "These convert to Stokes parameters **[I, Q, U, V]** using:\n",
-    "- I = RR + LL (total intensity)\n",
-    "- Q = RL + LR (linear polarization)\n",
-    "- U = i(LR - RL) (linear polarization at 45°)\n",
-    "- V = RR - LL (circular polarization)"
+    "- I = RR + LL\n",
+    "- Q = RL + LR\n",
+    "- U = i(LR - RL)\n",
+    "- V = RR - LL"
    ]
   },
   {
@@ -221,9 +219,10 @@
     "\n",
     "# From the inverse formulas:\n",
     "# RR = (I + V)/2 = (8 + 2)/2 = 5.0\n",
-    "# LL = (I - V)/2 = (8 - 2)/2 = 3.0\n",
     "# RL = (Q + iU)/2 = (0 + 0)/2 = 0.0\n",
     "# LR = (Q - iU)/2 = (0 - 0)/2 = 0.0\n",
+    "# LL = (I - V)/2 = (8 - 2)/2 = 3.0\n",
+    "\n",
     "\n",
     "circular_corr = np.array([5.0 + 0.0j, 0.0 + 0.0j, 0.0 + 0.0j, 3.0 + 0.0j])\n",
     "\n",
@@ -289,7 +288,7 @@
     "## 3. Multidimensional Visibility Arrays\n",
     "\n",
     "Real visibility data has multiple dimensions: time, baseline, frequency, and polarization.\n",
-    "The conversion functions work on any shape as long as the polarization dimension is last."
+    "The low level conversion functions work on any shape as long as the polarization dimension is last."
    ]
   },
   {
@@ -349,10 +348,12 @@
    "id": "24",
    "metadata": {},
    "source": [
-    "## 4. xarray DataArray Compatibility\n",
+    "## 4. Working with xarray DataArrays\n",
     "\n",
-    "The conversion functions also accept xarray DataArrays.\n",
-    "The output is always a numpy array."
+    "The low-level conversion functions (`corr_to_stokes`, `stokes_to_corr`) accept **only numpy arrays**.\n",
+    "If you have an xarray DataArray, extract the underlying numpy array using `.values` before calling these functions.\n",
+    "\n",
+    "For convenience with image data, use the higher-level functions (`image_corr_to_stokes`, `image_stokes_to_corr`) which accept both numpy arrays and xarray DataArrays directly."
    ]
   },
   {
@@ -386,12 +387,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert xarray DataArray to Stokes\n",
-    "vis_stokes_from_xarray = corr_to_stokes(vis_xarray, corr_type='linear')\n",
+    "# Extract numpy array from xarray using .values, then convert to Stokes\n",
+    "# Low-level functions only accept numpy arrays\n",
+    "vis_stokes_from_xarray = corr_to_stokes(vis_xarray.values, corr_type='linear')\n",
     "\n",
-    "print(f\"\\nOutput type: {type(vis_stokes_from_xarray)}\")\n",
+    "print(f\"Output type: {type(vis_stokes_from_xarray)}\")\n",
     "print(f\"Output shape: {vis_stokes_from_xarray.shape}\")\n",
-    "print(\"\\nNote: The output is a numpy array, not an xarray DataArray.\")"
+    "print(\"\\nNote: Low-level functions accept only numpy arrays.\")\n",
+    "print(\"Use .values to extract the underlying array from xarray DataArrays.\")"
    ]
   },
   {
@@ -406,9 +409,245 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "q04ba8dfmvc",
+   "metadata": {},
+   "source": [
+    "## 5. Image Conversion with Higher-Level Functions\n",
+    "\n",
+    "The low-level functions shown above (`corr_to_stokes` and `stokes_to_corr`) work on **numpy arrays** where **polarization is the last dimension**.\n",
+    "\n",
+    "However, image data have a different structure:\n",
+    "- **Image data**: `(time, frequency, polarization, l, m)`\n",
+    "\n",
+    "For image data, use the higher-level wrapper functions:\n",
+    "- `image_corr_to_stokes()` - converts image correlation products to Stokes\n",
+    "- `image_stokes_to_corr()` - converts image Stokes to correlation products\n",
+    "\n",
+    "These functions:\n",
+    "- Handle non-last polarization dimension via the `pol_axis` parameter (default: `pol_axis=2`)\n",
+    "- **Accept both numpy arrays and xarray DataArrays** (unlike the low-level functions)\n",
+    "- Preserve xarray structure, dimensions, coordinates, and attributes\n",
+    "- Automatically update polarization coordinates for xarray output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "j9o6errl1x",
+   "metadata": {},
+   "source": [
+    "### 5.1 Regular Image Structure (pol_axis=2)\n",
+    "\n",
+    "Let's create a synthetic image cube with the typical `image_xds[\"SKY\"]` structure where polarization is at axis 2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "2oxcic7f6m",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create synthetic image data\n",
+    "# Shape: (time=1, frequency=64, polarization=4, l=128, m=128)\n",
+    "# This matches the typical image_xds[\"SKY\"] structure\n",
+    "\n",
+    "n_time_img = 1\n",
+    "n_freq_img = 64\n",
+    "n_pol_img = 4\n",
+    "n_l = 128\n",
+    "n_m = 128\n",
+    "\n",
+    "# Generate random complex image data (correlation products)\n",
+    "# Shape: (1, 64, 4, 128, 128) where polarization is at axis 2 (not last!)\n",
+    "image_corr_np = np.random.randn(n_time_img, n_freq_img, n_pol_img, n_l, n_m) + \\\n",
+    "                1j * np.random.randn(n_time_img, n_freq_img, n_pol_img, n_l, n_m)\n",
+    "\n",
+    "print(f\"Input image correlation shape: {image_corr_np.shape}\")\n",
+    "print(f\"Dimensions: (time={n_time_img}, freq={n_freq_img}, pol={n_pol_img}, l={n_l}, m={n_m})\")\n",
+    "print(f\"pol_axis=2 is the default for image_corr_to_stokes()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "x6jjrla8djd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert correlation image to Stokes image\n",
+    "# No need to specify pol_axis since default is 2\n",
+    "image_stokes_np = image_corr_to_stokes(image_corr_np, corr_type='linear')\n",
+    "\n",
+    "print(f\"Output Stokes image shape: {image_stokes_np.shape}\")\n",
+    "print(\"Shape is preserved, only the polarization dimension is transformed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ve01f1dvgtk",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Stokes image back to correlation image (round-trip test)\n",
+    "image_corr_roundtrip_np = image_stokes_to_corr(image_stokes_np, corr_type='linear')\n",
+    "\n",
+    "print(f\"Round-trip image shape: {image_corr_roundtrip_np.shape}\")\n",
+    "print(f\"Round-trip successful: {np.allclose(image_corr_np, image_corr_roundtrip_np)}\")\n",
+    "print(f\"Maximum absolute error: {np.max(np.abs(image_corr_np - image_corr_roundtrip_np))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "len9x93hko",
+   "metadata": {},
+   "source": [
+    "### 5.2 Image with Polarization at Last Axis (pol_axis=-1)\n",
+    "\n",
+    "For images where polarization is the last dimension, you can use `pol_axis=-1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "saxz137785a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create image with polarization at last axis\n",
+    "# Shape: (time=1, frequency=32, l=64, m=64, polarization=4)\n",
+    "n_time_img2 = 1\n",
+    "n_freq_img2 = 32\n",
+    "n_l2 = 64\n",
+    "n_m2 = 64\n",
+    "n_pol2 = 4\n",
+    "\n",
+    "image_pol_last = np.random.randn(n_time_img2, n_freq_img2, n_l2, n_m2, n_pol2) + \\\n",
+    "                 1j * np.random.randn(n_time_img2, n_freq_img2, n_l2, n_m2, n_pol2)\n",
+    "\n",
+    "print(f\"Input image shape (pol at last axis): {image_pol_last.shape}\")\n",
+    "print(f\"Dimensions: (time={n_time_img2}, freq={n_freq_img2}, l={n_l2}, m={n_m2}, pol={n_pol2})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "jt1dub0cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert with pol_axis=-1\n",
+    "stokes_pol_last = image_corr_to_stokes(image_pol_last, corr_type='linear', pol_axis=-1)\n",
+    "print(f\"Stokes image shape: {stokes_pol_last.shape}\")\n",
+    "print(\"Shape is preserved, only the last dimension is transformed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8njjjw249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Round-trip test\n",
+    "corr_pol_last_rt = image_stokes_to_corr(stokes_pol_last, corr_type='linear', pol_axis=-1)\n",
+    "print(f\"Round-trip image shape: {corr_pol_last_rt.shape}\")\n",
+    "print(f\"Round-trip successful: {np.allclose(image_pol_last, corr_pol_last_rt)}\")\n",
+    "print(f\"Maximum absolute error: {np.max(np.abs(image_pol_last - corr_pol_last_rt))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dssp9z730mf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: When pol_axis=-1, image_corr_to_stokes produces the same result as corr_to_stokes\n",
+    "# (since polarization is already at the last axis)\n",
+    "stokes_lowlevel = corr_to_stokes(image_pol_last, corr_type='linear')\n",
+    "print(f\"Equivalent to low-level corr_to_stokes: {np.allclose(stokes_pol_last, stokes_lowlevel)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "kuklwfkchab",
+   "metadata": {},
+   "source": [
+    "### 5.3 xarray DataArray Examples\n",
+    "\n",
+    "The higher-level functions preserve xarray structure, coordinates, and attributes when given xarray input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7oumcn1cddj",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example with regular image structure (pol_axis=2)\n",
+    "image_corr_xr = xr.DataArray(\n",
+    "    image_corr_np,\n",
+    "    dims=['time', 'frequency', 'polarization', 'l', 'm'],\n",
+    "    coords={\n",
+    "        'time': [0.0],\n",
+    "        'frequency': np.linspace(1.4e9, 1.5e9, n_freq_img),  # 1.4-1.5 GHz\n",
+    "        'polarization': ['XX', 'XY', 'YX', 'YY'],\n",
+    "        'l': np.arange(n_l),\n",
+    "        'm': np.arange(n_m)\n",
+    "    },\n",
+    "    attrs={\n",
+    "        'telescope': 'VLA',\n",
+    "        'field': 'MySource',\n",
+    "        'units': 'Jy/pixel'\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(\"Input xarray image (correlation products):\")\n",
+    "print(image_corr_xr)\n",
+    "print(f\"\\nPolarization coordinates: {image_corr_xr.polarization.values}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9s3sm0ek4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to Stokes - output is also an xarray DataArray!\n",
+    "image_stokes_xr = image_corr_to_stokes(image_corr_xr, corr_type='linear')\n",
+    "\n",
+    "print(\"Output xarray image (Stokes parameters):\")\n",
+    "print(image_stokes_xr)\n",
+    "print(f\"\\nOutput type: {type(image_stokes_xr)}\")\n",
+    "print(f\"Polarization coordinates: {image_stokes_xr.polarization.values}\")\n",
+    "print(f\"\\nNote: Polarization coordinates automatically updated to ['I', 'Q', 'U', 'V']\")\n",
+    "print(f\"Attributes preserved: {image_stokes_xr.attrs}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ytijif2wpsd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Round-trip conversion\n",
+    "image_corr_roundtrip_xr = image_stokes_to_corr(image_stokes_xr, corr_type='linear')\n",
+    "\n",
+    "print(\"Round-trip xarray image:\")\n",
+    "print(f\"Polarization coordinates: {image_corr_roundtrip_xr.polarization.values}\")\n",
+    "print(f\"Round-trip successful: {np.allclose(image_corr_xr.values, image_corr_roundtrip_xr.values)}\")\n",
+    "print(f\"Maximum absolute error: {np.max(np.abs(image_corr_xr.values - image_corr_roundtrip_xr.values))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534941b1-9c96-43b7-96d8-e303ae40c608",
    "metadata": {},
    "outputs": [],
    "source": []
