Fix imaging demo notebook (partial)
grid2image_spheroid now matches the manual gridding path. But iteration control
seems broken somehow, it only runs a single major cycle and quits.

--- a/docs/core_tutorials/imaging/demo_imaging_loop.ipynb
+++ b/docs/core_tutorials/imaging/demo_imaging_loop.ipynb
@@ -72,6 +72,9 @@
     "source_fluxes = np.ones(nsources)  # 1 Jy each\n",
     "\n",
     "sources, npix, cell, ms4 = generate_ms4_with_point_sources(nsources, source_fluxes)\n",
+    "# Reset weights and flags, since we have put in a simulated source\n",
+    "ms4[\"WEIGHT\"] = xr.ones_like(ms4[\"WEIGHT\"])\n",
+    "ms4[\"FLAG\"] = xr.zeros_like(ms4[\"FLAG\"])\n",
     "\n",
     "print(f\"Generated MS4 with {nsources} point sources\")\n",
     "print(f\"Image size: {npix} x {npix} pixels\")\n",
@@ -161,7 +164,7 @@
     "    # Deconvolution\n",
     "    \"algorithm\": \"hogbom\",\n",
     "    \"gain\": 0.1,\n",
-    "    \"niter\": 1,           # Max total iterations\n",
+    "    \"niter\": 1000,           # Max total iterations\n",
     "    \"threshold\": 0.01,      # Stop at 10 mJy\n",
     "    \n",
     "    # Major cycle control - CAPPED AT 3 FOR THIS DEMO\n",
@@ -450,6 +453,8 @@
     "image_size = np.array([npix, npix])\n",
     "cell_size_arr = np.array([-cell_rad, cell_rad])\n",
     "n_pol = ms4.dims['polarization']\n",
+    "ms4[\"WEIGHT\"] = xr.ones_like(ms4[\"WEIGHT\"])\n",
+    "ms4[\"FLAG\"] = xr.zeros_like(ms4[\"FLAG\"])\n",
     "\n",
     "dirty_combined = np.zeros([1, n_pol, npix, npix], dtype=float)\n",
     "grid2image_spheroid_ms4(\n",
@@ -490,6 +495,12 @@
     "# Grid the visibilities\n",
     "grid = np.zeros([1, n_pol, npix, npix], dtype=np.complex128)\n",
     "sumwt = np.zeros([1, n_pol], dtype=np.float64)\n",
+    "\n",
+    "#weight = ms4.WEIGHT.data.copy()   # (70, 86, 1, 2) — matches vis shape\n",
+    "#flag = ms4.FLAG.data\n",
+    "#weight[flag] = 0.0\n",
+    "#nan_uvw = np.isnan(uvw[:, :, 0]) | np.isnan(uvw[:, :, 1])\n",
+    "#weight[nan_uvw] = 0.0\n",
     "\n",
     "standard_grid_numpy_wrap_input_checked(\n",
     "    vis_data=vis_data,\n",
@@ -585,6 +596,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": []
