Add the reference data download

--- a/docs/core_tutorials/imaging/make_psf_demo.ipynb
+++ b/docs/core_tutorials/imaging/make_psf_demo.ipynb
@@ -101,11 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ToDo: change to the download via toolviper\n",
     "!pip install gdown\n",
     "import gdown\n",
     "# get the ms v4\n",
     "gdown.download(id='19br3EYwdtu82iF4JkRaX-9u2_bhNAMjJ', output='lala.zip', fuzzy=True)\n",
-    "!unzip -o lala.zip"
+    "!unzip -o lala.zip\n",
+    "gdown.download(id='1WFBZCY4SEFhnqdAxmvDppUrWG3rLz0Xe', output='ngc5921-lsrk-cube.psf.zip', fuzzy=True)\n",
+    "!unzip -o ngc5921-lsrk-cube.psf.zip"
    ]
   },
   {
@@ -238,20 +241,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11728da7-1aa7-4510-94e2-e1f70204bc68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from xradio.image import open_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b7e67eb3-4565-4937-bb4c-ba4c777cb9af",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from xradio.image import open_image\n",
     "casa_psf_im = open_image('ngc5921-lsrk-cube.psf')"
    ]
   },
@@ -323,22 +317,6 @@
     "          title_text=fixed('PSF difference (make_psf - CASA) ')\n",
     "         )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2903f286-ae73-4185-88a3-5e366840c1de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b4bbf2f-af54-497f-bf01-3cea7b533e59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
