--- a/docs/core_tutorials/imaging/make_psf_demo.ipynb
+++ b/docs/core_tutorials/imaging/make_psf_demo.ipynb
@@ -12,8 +12,8 @@
     "[Colab Link](https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/core_tutorials/imaging/make_psf_demo.ipynb)\n",
     "\n",
     "\n",
-    "This notebook demonstrate how to use make_psf function to create PSF image.\n",
-    "The function is a wrapper function of standard_grid.grid2image_speroid_ms4.\n",
+    "This notebook demonstrates how to use make_psf function to create PSF image.\n",
+    "The function is a wrapper function of standard_grid.grid2image_spheroid_ms4.\n",
     "\n",
     "---\n",
     "\n",
