Switch matplotlib --> holoviz for demo notebook
Switched to using holoviz for the imaging loop demo notebook, for better
interactivity and inspect-ablity.

--- a/docs/core_tutorials/imaging/demo_imaging_loop.ipynb
+++ b/docs/core_tutorials/imaging/demo_imaging_loop.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# Demo of End-to-End Imaging Loop\n",
     "\n",
+    "\n",
+    "[Colab Link](https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/core_tutorials/imaging/demo_imaging_loop.ipynb)\n",
+    "\n",
+    "\n",
     "This notebook demonstrates the AstroViper imaging loop, which implements a tclean-like workflow with:\n",
     "- Major/minor cycle iteration control\n",
     "- Visibility-domain residual calculation\n",
@@ -33,7 +37,8 @@
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from matplotlib import pylab as pl\n",
+    "import holoviews as hv\n",
+    "hv.extension('bokeh')\n",
     "\n",
     "# AstroViper imports\n",
     "from astroviper.core.imaging.imaging_utils.standard_gridding_example import generate_ms4_with_point_sources\n",
@@ -154,8 +159,8 @@
     "# Configure imaging parameters\n",
     "params = {\n",
     "    # Image geometry - use the npix from generated data\n",
-    "    \"image_size\": (npix, npix),\n",
-    "    \"cell_size\": (-cell_rad, cell_rad),  # RA typically negative\n",
+    "    \"image_size\": (200, 200),\n",
+    "    \"cell_size\": (cell_rad, cell_rad), \n",
     "    \n",
     "    # Gridding\n",
     "    \"support\": 7,\n",
@@ -255,30 +260,24 @@
    "outputs": [],
    "source": [
     "# Plot the Stokes I model and residual\n",
-    "fig, axes = pl.subplots(1, 3, figsize=(15, 5))\n",
-    "\n",
-    "# Extract Stokes I (index 0) from shape (chan, stokes, y, x)\n",
     "model_I = model[0, 0, :, :].real\n",
     "residual_I = residual[0, 0, :, :].real\n",
-    "\n",
-    "# Model (Stokes I)\n",
-    "im0 = axes[0].imshow(model_I, origin='lower')\n",
-    "axes[0].set_title(f'Model (Stokes I)\\nTotal flux: {np.sum(model_I):.3f} Jy')\n",
-    "pl.colorbar(im0, ax=axes[0], label='Jy/pixel')\n",
-    "\n",
-    "# Residual (Stokes I)\n",
-    "im1 = axes[1].imshow(residual_I, origin='lower')\n",
-    "axes[1].set_title(f'Residual (Stokes I)\\nPeak: {np.max(np.abs(residual_I)):.4f} Jy')\n",
-    "pl.colorbar(im1, ax=axes[1], label='Jy/pixel')\n",
-    "\n",
-    "# Restored (Model + Residual, approximate)\n",
     "restored = model_I + residual_I\n",
-    "im2 = axes[2].imshow(restored, origin='lower')\n",
-    "axes[2].set_title('Restored (Model + Residual)')\n",
-    "pl.colorbar(im2, ax=axes[2], label='Jy/pixel')\n",
     "\n",
-    "pl.tight_layout()\n",
-    "pl.show()"
+    "img_model = hv.Image(model_I).opts(\n",
+    "    tools=['hover'], title=f'Model (Stokes I) — flux: {np.sum(model_I):.3f} Jy',\n",
+    "    width=400, height=400, colorbar=True, cmap='viridis'\n",
+    ")\n",
+    "img_resid = hv.Image(residual_I).opts(\n",
+    "    tools=['hover'], title=f'Residual (Stokes I) — peak: {np.max(np.abs(residual_I)):.4f} Jy',\n",
+    "    width=400, height=400, colorbar=True, cmap='viridis'\n",
+    ")\n",
+    "img_restored = hv.Image(restored).opts(\n",
+    "    tools=['hover'], title='Restored (Model + Residual)',\n",
+    "    width=400, height=400, colorbar=True, cmap='viridis'\n",
+    ")\n",
+    "\n",
+    "hv.Layout([img_model, img_resid, img_restored]).cols(3)"
    ]
   },
   {
@@ -571,25 +570,20 @@
     "print(\"=\"*60)\n",
     "\n",
     "# Visual comparison\n",
-    "fig, axes = pl.subplots(1, 3, figsize=(15, 4))\n",
+    "img_combined = hv.Image(dirty_combined[0, 0, :, :]).opts(\n",
+    "    tools=['hover'], title='grid2image_spheroid_ms4 (pol 0)',\n",
+    "    width=400, height=400, colorbar=True, cmap='viridis'\n",
+    ")\n",
+    "img_manual = hv.Image(dirty_manual[0, 0, :, :]).opts(\n",
+    "    tools=['hover'], title='Manual gridding (pol 0)',\n",
+    "    width=400, height=400, colorbar=True, cmap='viridis'\n",
+    ")\n",
+    "img_diff = hv.Image(diff[0, :, :]).opts(\n",
+    "    tools=['hover'], title=f'Difference — max={max_diff:.2e}',\n",
+    "    width=400, height=400, colorbar=True, cmap='RdBu_r'\n",
+    ")\n",
     "\n",
-    "# Combined method (pol 0)\n",
-    "im0 = axes[0].imshow(dirty_combined[0, 0, :, :], origin='lower')\n",
-    "axes[0].set_title('grid2image_spheroid_ms4\\n(pol 0)')\n",
-    "pl.colorbar(im0, ax=axes[0])\n",
-    "\n",
-    "# Manual method (pol 0)\n",
-    "im1 = axes[1].imshow(dirty_manual[0, 0, :, :], origin='lower')\n",
-    "axes[1].set_title('Manual gridding\\n(pol 0)')\n",
-    "pl.colorbar(im1, ax=axes[1])\n",
-    "\n",
-    "# Difference\n",
-    "im2 = axes[2].imshow(diff[0,:, :], origin='lower', cmap='RdBu_r')\n",
-    "axes[2].set_title(f'Difference\\nmax={max_diff:.2e}')\n",
-    "pl.colorbar(im2, ax=axes[2])\n",
-    "\n",
-    "pl.tight_layout()\n",
-    "pl.show()"
+    "hv.Layout([img_combined, img_manual, img_diff]).cols(3)"
    ]
   },
   {
