Update the reference psf iamge download

--- a/docs/core_tutorials/imaging/make_psf_demo.ipynb
+++ b/docs/core_tutorials/imaging/make_psf_demo.ipynb
@@ -106,9 +106,19 @@
     "import gdown\n",
     "# get the ms v4\n",
     "gdown.download(id='19br3EYwdtu82iF4JkRaX-9u2_bhNAMjJ', output='lala.zip', fuzzy=True)\n",
-    "!unzip -o lala.zip\n",
-    "gdown.download(id='1WFBZCY4SEFhnqdAxmvDppUrWG3rLz0Xe', output='ngc5921-lsrk-cube.psf.zip', fuzzy=True)\n",
-    "!unzip -o ngc5921-lsrk-cube.psf.zip"
+    "!unzip -o lala.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5556add-4a6a-407a-9a4f-50b80d44c747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from toolviper.utils.data import download, update\n",
+    "update()\n",
+    "download(file='ngc5921-lsrk-cube.psf')"
    ]
   },
   {
