--- a/docs/tutorials/astroviper_tutorial_mosaics.ipynb
+++ b/docs/tutorials/astroviper_tutorial_mosaics.ipynb
@@ -2562,7 +2562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timg",
+   "display_name": "zinc",
    "language": "python",
    "name": "python3"
   },
@@ -2576,7 +2576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
